--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "The Stage Right Labs home page and blog",
   "author": "Ryan Durham <ryan@stagerightlabs.com>",
   "scripts": {
-    "docs:dev": "vuepress dev .",
-    "docs:build": "vuepress build ."
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "devDependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "purgecss-webpack-plugin": "^1.2.0",
     "glob-all": "^3.1.0",
     "node-sass": "^4.9.0",
     "purgecss": "^1.0.1",
     "sass-loader": "^7.0.3",
     "tailwindcss": "^0.5.3",
     "vuepress": "^0.10.1"
-  }
+  },
+  "dependencies": {}
 }
