--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "devDependencies": {
     "tailwindcss": "^0.5.3",
+    "vue-awesome": "^2.3.7",
     "vuepress": "^0.10.1"
   },
   "dependencies": {
-    "vue-awesome": "^2.3.7"
+    "date-fns": "^1.29.0",
+    "prismjs": "^1.15.0"
   }
 }
