--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "vuepress build content"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-plugin-vue": "^4.5.0",
     "tailwindcss": "^0.5.3",
     "vue-awesome": "^2.3.7",
     "vuepress": "^0.10.1"
