--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "vuepress": "^0.10.2"
   },
   "dependencies": {
-    "vue-awesome": "^3.0.2",
     "date-fns": "^1.29.0",
-    "prismjs": "^1.15.0"
+    "prismjs": "^1.15.0",
+    "vue-awesome": "^3.0.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
