--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "The Stage Right Labs home page and blog",
   "author": "Ryan Durham <ryan@stagerightlabs.com>",
   "scripts": {
-    "dev": "vuepress dev content",
-    "build": "vuepress build content"
+    "dev": "vuepress dev blog",
+    "build": "vuepress build blog"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-plugin-vue": "^4.7.1",
-    "tailwindcss": "^0.6.6",
-    "vuepress": "^0.14.8"
+    "eslint": "^5.12.1",
+    "eslint-plugin-vue": "^5.1.0",
+    "tailwindcss": "^0.7.4",
+    "vuepress": "^0.14.8",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "date-fns": "^1.30.1",
     "prismjs": "^1.15.0",
-    "vue-awesome": "^3.3.1",
-    "webpack-node-externals": "^1.7.2"
+    "vue-awesome": "^3.3.1"
   }
 }
