--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "eslint": "^5.15.3",
     "eslint-plugin-vue": "^5.2.2",
     "tailwindcss": "^0.7.4",
-    "vuepress": "^0.14.10",
+    "vuepress": "v1.0.0-alpha.44",
+    "vuepress-plugin-autometa": "^0.1.10",
+    "vuepress-plugin-sitemap": "^2.1.1",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "date-fns": "^1.30.1",
-    "prismjs": "^1.15.0",
-    "vue-awesome": "^3.4.0"
+    "vue-awesome": "^3.5.1"
   }
 }
