--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.2",
-    "tailwindcss": "^1.0.0-beta.4",
-    "vuepress": "v1.0.0-alpha.47",
+    "tailwindcss": "^1.0.4",
+    "vuepress": "^1.0.1",
     "vuepress-plugin-autometa": "^0.1.10",
     "vuepress-plugin-sitemap": "^2.1.2",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "date-fns": "^1.30.1",
-    "vue-awesome": "^3.5.1"
+    "vue-awesome": "^3.5.4"
   }
 }
