--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
+        "laravel/telescope": "^3.5",
         "laravel/tinker": "^2.0",
         "livewire/livewire": "^1.3"
     },
