Configure testing database

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,13 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+TEST_DB_CONNECTION=pgsql
+TEST_DB_HOST=postgres
+TEST_DB_PORT=5432
+TEST_DB_DATABASE=stagerightlabs_test
+TEST_DB_USERNAME=stagerightlabs
+TEST_DB_PASSWORD=secret
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
