--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "blade-ui-kit/blade-heroicons": "^0.2.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/telescope": "^3.5",
         "laravel/tinker": "^2.0",
@@ -20,6 +19,7 @@
     },
     "require-dev": {
         "facade/ignition": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
@@ -61,6 +61,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "format": [
+            "php-cs-fixer fix"
         ]
     }
 }
