--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.24",
         "laravel/telescope": "^3.5",
         "laravel/tinker": "^2.0",
+        "league/commonmark": "^1.5",
         "livewire/livewire": "^1.3"
     },
     "require-dev": {
