--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install front-end dependencies
         run: |
-          npm ci
+          npm install --no-save --no-package-lock
           npm run prod
 
       - name: Install composer dependencies
