--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install front-end dependencies
         run: |
-          npm install --no-save --no-package-lock
+          npm install --no-save --no-package-lock --quiet --no-progress
           npm run prod
 
       - name: Install composer dependencies
@@ -39,6 +39,8 @@ jobs:
         run: |
           cp .env.ci .env
           php artisan key:generate
+          pwd
+          ls -la
 
       - name: Run test suite
         run: vendor/bin/phpunit
