--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: '12'
 
-      - name: Install front-end dependencies
+      - name: Build javascript assets
         run: |
           npm install --no-save --no-package-lock --quiet --no-progress
           npm run prod
@@ -44,3 +44,4 @@ jobs:
 
       - name: Run test suite
         run: vendor/bin/phpunit
+        working-directory: /__w/stagerightlabs.com/stagerightlabs.com
