--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
           node-version: '12'
 
@@ -43,5 +44,6 @@ jobs:
           ls -la
 
       - name: Run test suite
-        run: vendor/bin/phpunit
-        working-directory: ${{ github.workspace }}
+        run: |
+          cd ${{ github.workspace }}
+          vendor/bin/phpunit
