Add pwd to phpunit step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,5 @@ jobs:
 
       - name: Run test suite
         run: |
-          cd ${{ github.workspace }}
+          pwd
           vendor/bin/phpunit
