--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Install composer dependencies
         run: composer install --no-scripts --no-ansi --no-suggest --no-progress
@@ -17,10 +19,12 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          file_pattern: *.php
           commit_message: Apply PHP code formatting
 
   phpunit:
     runs-on: ubuntu-latest
+    needs: format
     container:
       image: kirschbaumdevelopment/laravel-test-runner:7.4
 
