--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          file_pattern: *.php
+          file_pattern: '*.php'
           commit_message: Apply PHP code formatting
 
   phpunit:
