--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
   phpunit:
     runs-on: ubuntu-latest
-    needs: format
+    needs: format-php
     container:
       image: kirschbaumdevelopment/laravel-test-runner:7.4
 
