Temporarily disable formatting job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,37 +3,36 @@ name: CI
 on: [pull_request]
 
 jobs:
-  format-php:
-    runs-on: ubuntu-latest
+  # format-php:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         ref: ${{ github.head_ref }}
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate --strict
+  #     - name: Validate composer.json and composer.lock
+  #       run: composer validate --strict
 
-      - name: Cache dependencies installed with composer
-        uses: "actions/cache@v2.0.0"
-        with:
-          path: "./vendor"
-          key: "php-${{ hashFiles('composer.lock') }}"
+  #     - name: Cache dependencies installed with composer
+  #       uses: "actions/cache@v2.0.0"
+  #       with:
+  #         path: "./vendor"
+  #         key: "php-${{ hashFiles('composer.lock') }}"
 
-      - name: Install composer dependencies
-        run: composer install --no-scripts --no-ansi --no-suggest --no-progress
+  #     - name: Install composer dependencies
+  #       run: composer install --no-scripts --no-ansi --no-suggest --no-progress
 
-      - name: Run php-cs-fixer
-        run: ./vendor/bin/php-cs-fixer fix
+  #     - name: Run php-cs-fixer
+  #       run: ./vendor/bin/php-cs-fixer fix
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Apply PHP code formatting
-          commit_user_name: CI Formatting Bot
+  #     - uses: stefanzweifel/git-auto-commit-action@v4
+  #       with:
+  #         commit_message: Apply PHP code formatting
+  #         commit_user_name: CI Formatting Bot
 
   phpunit:
     runs-on: ubuntu-latest
-    needs: format-php
     container:
       image: kirschbaumdevelopment/laravel-test-runner:7.4
 
