--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,35 +50,35 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Node
+      - name: Set up node
         uses: actions/setup-node@v1
         with:
           node-version: '12'
 
-      - name: NPM Dependency Cache
+      - name: NPM dependency cache
         uses: "actions/cache@v2.0.0"
         with:
           path: "./node_modules"
-          key: "npm-${{ hashFiles('package-lock.json') }}"
+          key: npm-${{ hashFiles('package-lock.json') }}
 
-      - name: Build Javascript Assets
+      - name: Build javascript assets
         run: |
           npm install --no-save --no-package-lock --quiet --no-progress
           npm run prod
 
-      - name: Composer Dependency Cache
+      - name: Composer dependency cache
         uses: "actions/cache@v2.0.0"
         with:
           path: "./vendor"
-          key: "php-${{ hashFiles('composer.lock') }}"
+          key: php-${{ hashFiles('composer.lock') }}
 
-      - name: Install PHP Dependencies
+      - name: Install php dependencies
         run: composer install --no-scripts --no-ansi --no-suggest --no-progress
 
-      - name: Prepare Application
+      - name: Prepare application
         run: |
           cp .env.ci .env
           php artisan key:generate
 
-      - name: Run Test Suite
+      - name: Run test suite
         run: ./vendor/bin/phpunit
