--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/telescope": "^3.5",
         "laravel/tinker": "^2.0",
         "league/commonmark": "^1.5",
-        "livewire/livewire": "^1.3"
+        "livewire/livewire": "^1.3",
+        "sentry/sentry-laravel": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
