--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+DB_CONNECTION=pgsql
+DB_HOST=postgres
+DB_PORT=5432
+DB_DATABASE=stagerightlabs_dev
+DB_USERNAME=stagerightlabs
+DB_PASSWORD=secret
+
 TEST_DB_CONNECTION=pgsql
 TEST_DB_HOST=postgres
 TEST_DB_PORT=5432
@@ -31,6 +38,8 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
 
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1
