--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "blade-ui-kit/blade-heroicons": "^0.2.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.1",
         "laravel/framework": "^7.24",
         "laravel/telescope": "^3.5",
         "laravel/tinker": "^2.0",
