--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@tailwindcss/typography": "^0.2",
-        "@tailwindcss/ui": "^0.4",
+        "@tailwindcss/typography": "^0.3.1",
         "alpinejs": "^2.7.3",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.9",
         "laravel-mix-tailwind": "^0.1.1",
         "resolve-url-loader": "^3.1.2",
-        "tailwindcss": "^1.9.6",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "autoprefixer": "^9.8.6",
+        "postcss": "^7.0.35",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
     }
 }
