--- a/package.json
+++ b/package.json
@@ -2,26 +2,21 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@tailwindcss/typography": "^0.3.1",
-        "alpinejs": "^2.7.3",
-        "cross-env": "^7.0.3",
-        "laravel-mix": "^5.0.9",
-        "laravel-mix-tailwind": "^0.1.1",
-        "resolve-url-loader": "^3.1.2",
-        "vue-template-compiler": "^2.6.12"
+        "production": "mix --production"
     },
     "dependencies": {
+        "laravel-mix-tailwind": "^0.1.1",
+        "@tailwindcss/typography": "^0.3.1",
         "@tailwindcss/forms": "^0.2.1",
-        "autoprefixer": "^9.8.6",
-        "postcss": "^7.0.35",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
+        "alpinejs": "^2.8.0",
+        "autoprefixer": "^10.1.0",
+        "laravel-mix": "^6.0.2",
+        "postcss": "^8.2.1",
+        "tailwindcss": "^2.0.2"
     }
 }
