--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
         run: npm install --no-progress
 
       - name: Run NPM Asset Pipeline
-        run: npm run prod
+        run: npm run build
 
       - name: Prepare Application
         run: |
