--- a/composer.json
+++ b/composer.json
@@ -8,28 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
-        "blade-ui-kit/blade-heroicons": "^1.2",
+        "php": "^8.0.2",
+        "blade-ui-kit/blade-heroicons": "^2.0",
         "doctrine/dbal": "^3.1",
-        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^9.0",
         "laravel/telescope": "^4.4",
-        "laravel/tinker": "^2.5",
-        "league/commonmark": "^1.6",
+        "laravel/tinker": "^2.7",
+        "league/commonmark": "^2.0.2",
         "livewire/livewire": "^2.0",
         "sentry/sentry-laravel": "^2.0",
         "stagerightlabs/actions": "^0.00.30"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
-        "friendsofphp/php-cs-fixer": "^2.18",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "friendsofphp/php-cs-fixer": "^3.12",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.5.10"
     },
     "config": {
         "optimize-autoloader": true,
