--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
-        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
-        "friendsofphp/php-cs-fixer": "^3.12",
+        "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -67,7 +67,7 @@
             "@php artisan key:generate --ansi"
         ],
         "format": [
-            "php-cs-fixer fix"
+            "pint"
         ]
     }
 }
