--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,10 @@ jobs:
         run: composer install --no-scripts --no-ansi --no-progress
 
       - name: Install Node and NPM
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+          check-latest: true
           cache: 'npm'
 
       - name: Install NPM Dependencies
