try using localhost for postgres in CI

--- a/.env.ci
+++ b/.env.ci
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 TEST_DB_CONNECTION=pgsql
-TEST_DB_HOST=postgres
+TEST_DB_HOST=localhost
 TEST_DB_PORT=5432
 TEST_DB_DATABASE=stagerightlabs_test
 TEST_DB_USERNAME=stagerightlabs
