--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "league/commonmark": "^2.0.2",
         "livewire/livewire": "^2.0",
         "sentry/sentry-laravel": "^2.0",
-        "stagerightlabs/actions": "^0.00.30"
+        "stagerightlabs/actions": "^0.00.30",
+        "symfony/http-client": "^6.1",
+        "symfony/mailgun-mailer": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
